# Gnome-HexViewer

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  Makefile.am  Makefile.in  README  README.md  compile_commands.json  configure  configure.ac  meson.build
.github/workflows/: c-cpp.yml  codeql-analysis.yml  codeql.yml
data/: Makefile.am  Makefile.in  hexviewer.desktop.in  meson.build  org.gnome.hexviewer.gschema.xml
icons/: Makefile.am  Makefile.in  meson.build
src/: Makefile.am  Makefile.in  app_sys_menu.ui  config.h  hexviewer_app.c  hexviewer_app.gresource.xml  hexviewer_app.h  hexviewer_prefs.c  hexviewer_prefs.h  hexviewer_prefs.ui  hexviewer_win.c  hexviewer_win.h  hexviewer_win.ui  meson.build  resources.c  rphexfile.c  rphexfile.h  rphexview.c  rphexview.h
